<resources>
    <string name="app_name">Project_result_Mob</string>
    <!--Login Activity -->
    <string name="welcome">Welcome to</string>
    <string name="please....">Please login if you want faster use</string>
    <string name="lginFacebook">Login with Facebook</string>
    <string name="lginGoogle">Login with Google</string>
    <string name="HOCHIMINH">HCM</string>
    <string name="Attractions">City</string>
    <string name="or">Or</string>
    <string name="lginUser">User</string>
    <string name="hint_hour">00</string>
    <string name="title_activity_main__menu_">Main_Menu_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="district_arrays">
        <item>District 1</item>
        <item>District 2</item>
        <item>District 3</item>
        <item>District 4</item>
        <item>District 5</item>
        <item>District 6</item>
        <item>District 7</item>
        <item>District 8</item>
        <item>District 9</item>
        <item>District 10</item>
        <item>Go Vap District</item>
        <item>Tan Binh District</item>
        <item>Tan Phu District</item>
        <item>Binh Thanh District</item>
        <item>Phu Nhuan District</item>
        <item>Thu Duc District</item>
        <item>Binh Tan District</item>
        <item>Binh Chanh District</item>
        <item>Cu Chi District</item>
        <item>Hoc Mon District</item>
        <item>Nha Be District</item>
        <item>Can Gio District</item>
    </string-array>


    <string name="attraction_place">Attraction Places</string>
    <string name="view_all"><u>view all</u></string>
    <string name="txt_item_home">Home</string>
    <string name="txt_item_checkin">Best Check In</string>
    <string name="txt_item_alert">News</string>
    <string name="txt_item_city">City Safely</string>
    <string name="txt_item_checklist">Check List</string>
    <string name="titile_gr_item_booking">Booking</string>
    <string name="txt_item_tips">Travel Tips</string>
    <string name="txt_item_guides">Travel Guides</string>
    <string name="titile_gr_item_more">More</string>
    <string name="txt_item_gallery">Gallery</string>
    <string name="txt_item_feedback">Feedback</string>
    <string name="txt_item_about">About Us</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_logout">Log out</string>
    <string name="hello">Hello,</string>
    <string name="nameUserAboutUs">Nguyen Tam</string>
    <string name="thankForUsed">!!! Thanks for used us application !!!</string>
    <string name="rate">RATE FOR US</string>
    <string name="teamus">Team us:</string>
    <string name="name1">Vo Thi Kim Nguyet(Leader)</string>
    <string name="name2">Nguyen Duc Thanh Tam</string>
    <string name="name3">Tran Anh Vu</string>
    <string name="name4">Vo Thi Ai hoa</string>
    <string name="name5">Nguyen Chi Dat</string>
    <string name="company">Company:</string>
    <string name="company_name">FPT Polytechnic Ho Chi  Minh</string>

</resources>
